--- a/MyIllustro/RAM/Top5.ini
+++ b/MyIllustro/RAM/Top5.ini
@@ -7,7 +7,7 @@ BackgroundMargins=0,34,0,14
 [Metadata]
 Name=Top
 Author=Kevin G.
-Information=5 applications les plus gourmandes en CPU.
+Information=5 applications les plus gourmandes en RAM.
 Version=1.0
 License=Creative Commons Attribution - Non - Commercial - Share Alike 3.0
 
@@ -15,7 +15,7 @@ License=Creative Commons Attribution - Non - Commercial - Share Alike 3.0
 ; Les variables & Styles
 @includeSettings=#@#Includes\Settings.inc
 ; Grossomodo tout ce qui se voit
-@includeTemplate=#@#Templates\Template.CPU.Top.inc
+@includeTemplate=#@#Templates\Template.RAM.Top.inc
 
 ;___TITLE___
 	[MeterTitle]
@@ -25,6 +25,6 @@ License=Creative Commons Attribution - Non - Commercial - Share Alike 3.0
 	Y=12
 	W=70
 	H=18
-	Text=CPU Top
+	Text=RAM Top
 	LeftMouseUpAction=["taskmgr.exe"]
 	ToolTipText=Ouvrir le Gestionnaire des taches
